--- a/style.css
+++ b/style.css
@@ -4,20 +4,22 @@ body {
 }
 
 .name-project {
-    width: 80%;
+    width: 75%;
     height: 3em;
     background-color: azure;
     border-radius: 3px;
     text-align: center;
     margin: auto;
-    min-width: 615px;
-    max-width: 635px;
     margin-top: 25px;
+    max-width: 700px;
 }
 
 .image-project{
     border-radius: 10px;
-    min-width: 600px;
+    height: auto; 
+    width: auto; 
+    width: 80%;
+    max-width: 700px;
 }
 
 .name-project:hover{
