--- a/alura-cursos/html-css/projetos/css/parte-1.css
+++ b/alura-cursos/html-css/projetos/css/parte-1.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px 15px;
     /* opacity: 50$; */
-    background-image: linear-gradient(rgb(29, 57, 82), cadetblue);
+    
     background-color: ;
 }
 
@@ -10,9 +10,10 @@ div h1 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3em;
-    background-color: cadetblue;
     color: white;
+    background-color: black;
     font-style: italic;
+    border-radius: 0.25em;
 
 }
 
@@ -21,9 +22,13 @@ div h1 {
     text-align: center;
     align-content: center;
     align-items: center;
-    height: auto;
-    background-image: linear-gradient(rgb(29, 57, 82), cadetblue);
     /* border: 1px solid red; */
+}
+.nav-bar {
+    width: 100%;
+    height: 4em;
+    background-color: white;
+    border-radius: 0px 0px 10px 10px;
 }
 
 .banner a img {
@@ -40,6 +45,11 @@ div h1 {
     /* border: 1px solid red; */
     margin: auto;
     max-width: 992px;
+    padding-top: 15px;
+}
+
+.bg-gradient {
+    background-image: linear-gradient(rgb(29, 57, 82), cadetblue);
 }
 
 p em strong {
