--- a/alura-cursos/html-css/projetos/css/parte-1.css
+++ b/alura-cursos/html-css/projetos/css/parte-1.css
@@ -1,20 +1,29 @@
 body {
     margin: 0px 15px;
     /* opacity: 50$; */
-    
-    background-color: ;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 div h1 {
     margin: 0px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 3em;
+}
+
+.title {
     color: white;
     background-color: black;
     font-style: italic;
     border-radius: 0.25em;
+    font-size: 3em;
+    text-align: center;
+}
 
+.sub-title {
+    background-color: black;
+    border-radius: 0.25em;
+    padding: 15px;
+    color: white;
+    text-align: center;
 }
 
 .banner {
@@ -63,10 +72,21 @@ p em strong {
 }
 
 section {
-    border:2px solid teal;
-    border-radius: 0.5em;
     padding: 15px;
     background-color: white;
+}
+
+ul {
+    padding: 0px;;
+    border-radius: 10px;
+}
+
+.item {
+    color: white;
+    padding: 10px;
+    list-style: none;
+    font-size: 22px;
+    border: 1px solid white;
 }
 
 
@@ -79,5 +99,4 @@ section {
     border-radius: 0px 10px;
     width: 40%;
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
 }
