--- a/alura-cursos/ibuy/css/style.css
+++ b/alura-cursos/ibuy/css/style.css
@@ -163,8 +163,6 @@ a.admin{
 .shopitens{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    
 }
 
 .item{
@@ -172,12 +170,13 @@ a.admin{
     width: 120px;
 
     text-align: center;
-    margin-bottom: 15px;
+    margin: 0 10px 15px 0;
 }
 
 .item img {
-    width: 120px;
+    width: 100px;
     margin-bottom: 10px;
+    /* border-bottom: 1px solid #CFCFCF; */
 }
 
 .item-input{
